# ConsultingAI-digital-advisory

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test_all_agents.py  test_client_engagement.py
config/: free_llm_config.py  frontend_settings.py  streamlit_config.toml
docs/: ConsultingAI-Go-to-Market-Strategy.md  architect-initial-assessment.md  architecture-validation-report.md  architecture.md  epic3-completion-summary.md  epic4-demo-script.md  final_som_demonstration_report.md  po-master-checklist-validation-report.md
docs_save/: assignment_evidence.md  epic4-completion-summary.md  prd-validation-report.md  prd.md  project-brief.md
frontend/components/: agent_status_display.py  client_profile_form.py  consulting_spinner.py  escalation_flowchart.py  metrics_dashboard.py
frontend/styles/: consulting_theme.css  main.css
frontend/utils/: data_formatters.py  session_state.py  streamlit_helpers.py
pages/: 01_🏢_Client_Engagement.py  02_🤖_Agent_Coordination.py  03_⚡_Escalation_System.py  04_👥_Expert_Personas.py  05_📊_Analytics_Dashboard.py
scripts/: verify_setup.py
src/: consultingai.md  main.py
src/advanced_capabilities/: client_engagement_framework.py
src/agents/: business_analyst.py  code_reviewer.py  system_architect.py  system_architect_backup.py  test_basic.py
src/consultingai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/coordination/: advanced_escalation.py  chief_engagement_manager.py  enhanced_coordination.py  escalation_system.py
src/demonstration/: consulting_scenarios.py  tier_system_demo.py
src/experts/: contextual_expertise_router.py  dynamic_persona_system.py  expertise_memory_learning.py  multi_expert_consensus.py
src/interfaces/: advanced_human_interaction.py  expertise_decision_interfaces.py  human_interaction.py
src/som_framework/: complete_som_integration.py  final_som_demonstration.py  hierarchical_orchestration.py  knowledge_synthesis.py  outer_team_architecture.py
src/utils/: logging_config.py
static/images/: .gitkeep  README.md
