[project]
name = "consultingai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyautogen",
    "pydantic",
    "pyyaml", 
    "pytest"
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.0",
    "pylint>=3.3.7",
    "pytest-cov>=6.2.1",
]


